--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./styles.css">
     <script defer src="./script.js"></script>
 </head>
 <body>
-    
+    <h1>Test</h1>
 </body>
 </html>
