--- a/index.html
+++ b/index.html
@@ -3,11 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tic-Tac-Toe</title>
     <link rel="stylesheet" href="./styles.css">
     <script defer src="./script.js"></script>
 </head>
 <body>
-    <h1>Test</h1>
+    <h1>Tic-Tac-Toe!</h1>
+    <hr>
+    <div id="gameboard">
+            <div>1</div>
+            <div>2</div>
+            <div>3</div>
+            <div>4</div>
+            <div>5</div>
+            <div>6</div>
+            <div>7</div>
+            <div>8</div>
+            <div>9</div>
+    </div>
 </body>
 </html>
