--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
     <h1>Tic-Tac-Toe!</h1>
     <hr>
     <div id="gameboard">
-            <div>1</div>
-            <div>2</div>
-            <div>3</div>
-            <div>4</div>
-            <div>5</div>
-            <div>6</div>
-            <div>7</div>
-            <div>8</div>
-            <div>9</div>
+            <div class="tiles"></div>
+            <div class="tiles"></div>
+            <div class="tiles"></div>
+            <div class="tiles"></div>
+            <div class="tiles"></div>
+            <div class="tiles"></div>
+            <div class="tiles"></div>
+            <div class="tiles"></div>
+            <div class="tiles"></div>
     </div>
 </body>
 </html>
