Added some basic functionality

--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
 <body>
     <h1>Tic-Tac-Toe!</h1>
     <hr>
+    <h2 class="player1message">
+         <strong>Player 1</strong>
+        <br>
+         It's your turn you are 'X'
+    </h2>
+    <h2 class="player2message">
+        <strong>Player 2</strong>
+       <br>
+        It's your turn you are 'O'
+   </h2>
     <div id="gameboard">
             <div class="tiles"></div>
             <div class="tiles"></div>
