Basic version of game completed

--- a/index.html
+++ b/index.html
@@ -20,6 +20,24 @@
        <br>
         It's your turn you are 'O'
    </h2>
+   
+   <h2 class="player1winmessage">
+    <strong>Player 1 (X)</strong>
+       <br>
+    You win!!!!!
+   </h2>
+
+    <h2 class="player2winmessage">
+     <strong>Player 2 (O)</strong>
+        <br>
+     You win!!!!!
+    </h2>
+
+    <h2 class="draw">
+        <strong>It's a Draw!!!!!</strong>
+        
+       </h2>
+
     <div id="gameboard">
             <div class="tiles"></div>
             <div class="tiles"></div>
@@ -30,6 +48,15 @@
             <div class="tiles"></div>
             <div class="tiles"></div>
             <div class="tiles"></div>
+    </div>
+    <br>
+    <div id="playagain">
+    <button>Play Again?</button>
+    </div>
+    <br>
+    <h2>Want some background music 👀 <br> Adjust volume to start it </h2>
+    <div id="slider">
+    <input type="range" id="volume-slider">
     </div>
 </body>
 </html>
