some more functionality added

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <h1>Tic-Tac-Toe!</h1>
     <hr>
+    <div id="messages">
     <h2 class="player1message">
          <strong>Player 1</strong>
         <br>
@@ -36,7 +37,8 @@
     <h2 class="draw">
         <strong>It's a Draw!!!!!</strong>
         
-       </h2>
+    </h2>
+    </div>
 
     <div id="gameboard">
             <div class="tiles"></div>
@@ -54,9 +56,9 @@
     <button>Play Again?</button>
     </div>
     <br>
-    <h2>Want some background music 👀 <br> Adjust volume to start it </h2>
+    
     <div id="slider">
-    <input type="range" id="volume-slider">
+    <button id="play">Play Music</button>
     </div>
 </body>
 </html>
