--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Tic-Tac-Toe</title>
     <link rel="stylesheet" href="./styles.css">
     <script defer src="./script.js"></script>
+    <link rel="icon" href="data:,">
+
 </head>
 <body>
     <h1>Tic-Tac-Toe!</h1>
